# kuka_experimental

./: .gitignore  .travis.yml  README.md
kuka/: CMakeLists.txt  package.xml
kuka_cybertech_kr16_r1610_moveit_plugins/: CMakeLists.txt  kuka_cybertech_kr16_r1610_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
kuka_cybertech_kr16_r1610_moveit_plugins/src/: kuka_cybertech_kr16_r1610_manipulator_ikfast_moveit_plugin.cpp  kuka_cybertech_kr16_r1610_manipulator_ikfast_solver.cpp
kuka_cybertech_kr16_r1610_support/: CMakeLists.txt  package.xml
kuka_cybertech_kr16_r1610_support/launch/: load_kr16_r1610.launch  test_kr16_r1610.launch
kuka_cybertech_kr16_r1610_support/test/: roslaunch_test.xml
kuka_cybertech_kr16_r1610_support/urdf/: kr16_r1610.xacro  kr16_r1610_macro.xacro
kuka_eki_hw_interface/: CMakeLists.txt  package.xml
kuka_eki_hw_interface/krl/: EkiHwInterface+.xml  EkiHwInterface.xml  README.md  RobotCommandServer.xml  RobotStateServer.xml  kuka_eki_hw_interface.src
kuka_eki_hw_interface/launch/: controller_spawner.launch  robot_interface_streaming.launch
kuka_eki_hw_interface/src/: kuka_eki_hw_interface.cpp  kuka_eki_hw_interface_node.cpp
kuka_eki_hw_interface/test/: test_hardware_interface.launch  test_params.yaml
kuka_experimental/: CMakeLists.txt  package.xml
kuka_kr10_gazebo/: CMakeLists.txt  README.md  package.xml
kuka_kr10_gazebo/config/: joint_state_controller.yaml  kr10_arm_controller.yaml
kuka_kr10_gazebo/launch/: kr10_control.launch  kr10_gazebo.launch  load_kr10.launch  spawn_kr10.launch  spawn_object.launch  start.launch  world_test.launch
kuka_kr10_gazebo/meshes/: model.dae  pipe.dae
kuka_kr10_gazebo/objects/: pipe1.urdf.xacro
kuka_kr10_gazebo/scripts/: inertial_xml_maker.py  robotTest.py
kuka_kr10_gazebo/urdf/: endorse_tool_macro.xacro  ft_macro.xacro  kr10.xacro  kr10_macro.xacro  proxxon_drill_macro.xacro
kuka_kr10_gazebo/worlds/: pipe.world
kuka_kr10_support/: CMakeLists.txt  package.xml
kuka_kr10_support/config/: joint_names_kr10r1100sixx.yaml  opw_parameters_kr10r1100_2.yaml  opw_parameters_kr10r1420.yaml  opw_parameters_kr10r1440_2.yaml
kuka_kr10_support/launch/: load_kr10r1100_2.launch  load_kr10r1100sixx.launch  load_kr10r1420.launch  load_kr10r1440_2.launch  load_kr10r900_2.launch  load_kr10r900sixx.launch  test_kr10r1100_2.launch  test_kr10r1100sixx.launch  test_kr10r1420.launch  test_kr10r1440_2.launch  test_kr10r900_2.launch  test_kr10r900sixx.launch
kuka_kr10_support/test/: roslaunch_test_kr10r1100_2.xml  roslaunch_test_kr10r1100sixx.xml  roslaunch_test_kr10r1420.xml  roslaunch_test_kr10r1440_2.xml  roslaunch_test_kr10r900_2.xml
kuka_kr10_support/urdf/: endorse_tool_macro.xacro  ft_sensor_macro.xacro  kr10r1100_2.xacro  kr10r1100_2_macro.xacro  kr10r1100sixx.xacro  kr10r1100sixx_macro.xacro  kr10r1420.xacro  kr10r1420_macro.xacro  kr10r1440_2.xacro  kr10r1440_2_macro.xacro  kr10r900_2.xacro  kr10r900_2_macro.xacro  kr10r900sixx.xacro  kuka_proxxon_drilling.xacro  proxxon_drill_macro.xacro  spatula_tool.xacro
kuka_kr120_support/: CMakeLists.txt  package.xml
kuka_kr120_support/launch/: load_kr120r2500pro.launch  test_kr120r2500pro.launch
kuka_kr120_support/test/: roslaunch_test.xml
kuka_kr120_support/urdf/: kr120r2500pro.urdf  kr120r2500pro.xacro  kr120r2500pro_macro.xacro
kuka_kr150_support/: CMakeLists.txt  package.xml
kuka_kr150_support/config/: opw_parameters_kr150_r3100-2.yaml
kuka_kr150_support/launch/: load_kr150_2.launch  load_kr150_r3100-2.launch  load_kr150_r3100_prime.launch  load_kr150r3100_2.launch  test_kr150_2.launch  test_kr150_r3100-2.launch  test_kr150_r3100_prime.launch  test_kr150r3100_2.launch
kuka_kr150_support/test/: roslaunch_test.xml  roslaunch_test_kr150_r3100-2.xml  roslaunch_test_kr150r3100_2.xml
kuka_kr150_support/urdf/: kr150_2_macro.xacro  kr150_r3100-2.xacro  kr150_r3100-2_macro.xacro  kr150_r3100_prime.xacro  kr150_r3100_prime_macro.xacro  kr150r3100_2.xacro  kr150r3100_2_macro.xacro
kuka_kr16_gazebo/: CMakeLists.txt  README.md  package.xml
kuka_kr16_gazebo/config/: joint_state_controller.yaml  joint_trajectory_controller.yaml
kuka_kr16_gazebo/launch/: controller_utils.launch  load_kr16_2_gazebo.launch  test_kr16_2_gazebo.launch
kuka_kr16_gazebo/urdf/: gazebo.xacro  kr16_2_gazebo_macro.xacro  kr16_2_gazebo_robot.xacro  kr16_2_transmission_macro.xacro
kuka_kr16_support/: CMakeLists.txt  package.xml
kuka_kr16_support/config/: opw_parameters_kr16_2.yaml  opw_parameters_kr16_r1610_2.yaml  opw_parameters_kr16_r2010_2.yaml  opw_parameters_kr16r1610cybertech.yaml
kuka_kr16_support/launch/: load_kr16.launch  load_kr16_2.launch  load_kr16_r1610_2.launch  load_kr16_r2010_2.launch  load_kr16r1610cybertech.launch  test_kr16.launch  test_kr16_2.launch  test_kr16_r1610_2.launch  test_kr16_r2010_2.launch  test_kr16r1610cybertech.launch
kuka_kr16_support/test/: roslaunch_test.xml  roslaunch_test_kr16_2.xml  roslaunch_test_kr16r1610cybertech.xml
kuka_kr16_support/urdf/: kr16.urdf  kr16.xacro  kr16_2.urdf  kr16_2.xacro  kr16_2_macro.xacro  kr16_macro.xacro  kr16_r1610_2.xacro  kr16_r1610_2_macro.xacro  kr16_r2010_2.xacro  kr16_r2010_2_macro.xacro  kr16r1610cybertech.xacro  kr16r1610cybertech_macro.xacro
kuka_kr180_support/: CMakeLists.txt  package.xml
kuka_kr180_support/launch/: load_kr180r3500_ultra_k.launch  test_kr180r3500_ultra_k.launch
kuka_kr180_support/test/: roslaunch_test.xml
kuka_kr20_support/: CMakeLists.txt  package.xml
kuka_kr3_support/: CMakeLists.txt  package.xml
kuka_kr4_support/: CMakeLists.txt  package.xml
kuka_kr5_support/: CMakeLists.txt  package.xml
kuka_kr60_support/: CMakeLists.txt  package.xml
kuka_kss_hw_interface/: CMakeLists.txt  package.xml
kuka_lbr_iiwa_support/: CMakeLists.txt  package.xml
kuka_resources/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/: CMakeLists.txt  kuka_rsi_hardware_interface_plugin.xml  package.xml
kuka_rsi_hw_interface_msgs/: CMakeLists.txt  package.xml
kuka_rsi_simulator/: CMakeLists.txt  README.md  package.xml
(+882 files in other folders)
