<?xml version="1.0"?>
<package format="2">
  <name>kuka_eki_hw_interface</name>
  <version>0.0.1</version>
  <description>A ROS-Control hardware interface for use with KUKA EKI</description>
  <author>Brett Hemes (3M)</author>
  <maintainer email="brhemes@mmm.com">Brett Hemes (3M)</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_eki_hw_interface</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>roscpp</depend>
</package>
