<package>
  <name>kuka_experimental</name>
  <version>0.0.1</version>
  <description>Experimental packages for KUKA manipulators within ROS-Industrial.</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kuka_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kuka_kr120_support</run_depend>
  <run_depend>kuka_kr16_support</run_depend>
  <run_depend>kuka_kr210_support</run_depend>
  <run_depend>kuka_lbr_iiwa_support</run_depend>
  <run_depend>kuka_resources</run_depend>
  <run_depend>kuka_rsi_hw_interface</run_depend>
  <run_depend>kuka_rsi_simulator</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
