<?xml version="1.0"?>
<package format="2">
  <name>kuka_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for KUKA manipulators within ROS-Industrial.</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <author email="sedwards@swri.org">Shaun Edwards</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kuka_experimental</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>kuka_kr120_support</exec_depend>
  <exec_depend>kuka_kr16_support</exec_depend>
  <exec_depend>kuka_kr210_support</exec_depend>
  <exec_depend>kuka_lbr_iiwa_support</exec_depend>
  <exec_depend>kuka_resources</exec_depend>
  <exec_depend>kuka_rsi_hw_interface</exec_depend>
  <exec_depend>kuka_rsi_simulator</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
