<?xml version="1.0"?>
<package format="2">
  <name>kuka_kr20_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR20 R1810_2 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR20 R1810_2 manipulators. This currently includes the KUKA KR70 R2100 only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR20 R1810_2 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in the online datasheet <a href="fehlt noch">here</a>. All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p>
      <b>NB</b>: this package currently uses non-valid inertia parameters.
    </p>
  </description>
  <author>Lars Tingelstad</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
